--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #aaa;
+    background-color: #FFFFFF;
     font-family: 'Poppins', sans-serif;
     
 }
@@ -18,7 +18,43 @@ body a{
     margin:0 auto;
     padding: 50px 30px;
 }
+/* header styles */
+header{
+    background-color: #FFFFFF;
+    max-width: 100%;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    width: 1180px;
+    padding: 30px 0px;
 
+}
+.logo{
+    color: #18191F;
+    font-size: 40px;
+}
+.nav-items{
+    display: flex;
+    color: #18191F;
+}
+.nav-items li{
+    list-style: none;
+    margin:0px 15px
+}
+.nav-items a{
+    color: #18191F;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+.top-icon{
+    font-size: 18px;
+}
+.fa-cart-arrow-down{
+    margin-left: 15px;
+}
 /* top-banner styles */
 .curcle{
     background-image: url(images/Circle\ design.svg);
@@ -90,7 +126,6 @@ body a{
     grid-row-gap: 20px;
     width: 980px;
     margin: auto;
-    border: 1px solid black;
 }
 .popular-title{
     color: #3A3A3A;
@@ -147,4 +182,44 @@ body a{
 .fa-arrow-right-long{
     text-align:right;
     color: #FB8200;
+}
+
+/* top futuer styles */
+.top-futuer{
+    display: flex;
+    gap: 20px;
+    width: 980px;
+    margin: auto;
+}
+.futuer-btn{
+    border-radius:0;
+    width: 25%;
+}
+.futuer{
+    width: 610px;
+    padding: 0px 20px;
+}
+.futuer-title{
+    font-size: 30px;
+}
+.fa-arrow-right-long{
+    color:#FFFFFF
+}
+/* footer-style */
+footer{
+    background-color: #18191F;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 50px 0px;
+}
+.fluid{
+    background-color: #787885;
+    padding: 15px;
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+.social-icon{
+    font-size: 20px;
 }
